add Agua de Fresa

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href=recipes/watermelon-lemonade-slush.html>Refreshing Watermelon Lemonade Slush</a></p>
-
+    <p>
+        <a href=recipes/watermelon-lemonade-slush.html>Refreshing Watermelon 
+        Lemonade Slush
+        </a>
+    </p>
+    <p>
+        <a href="recipes/Agua-de-Fresa.html">Agua de Fresa
+        </a>
+    </p>
 </body>
 </html>
