--- a/recipes/watermelon-lemonade-slush.html
+++ b/recipes/watermelon-lemonade-slush.html
@@ -7,8 +7,8 @@
     <title>Watermelon Slush</title>
 </head>
 <body>
-    <h1>Refreshing Watermelon Lemonade Slush</h1>
-    <p><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets-ucg.meredithcorp.io%2F5a43912448315232b79146bea5849f74%2F1027018.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="A pleasing cup of watermelon slush"></p>
+    <h1>Refreshing Watermelon Lemonade <strong>Slush</strong></h1>
+    <p><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets-ucg.meredithcorp.io%2F5a43912448315232b79146bea5849f74%2F1027018.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="A pleasing cup of watermelon slush" width="300"></p>
     <p>Whenever I have excess seasonal fruit, I freeze it in chunks for fast and easy slushes and smoothies. Here's a delicious way to use up some watermelon.
     </p>
     <strong> Time:</strong> 5mins
@@ -23,14 +23,18 @@
         <strong>Total:</strong> 45mins
     </p>
     <p>
+        <h3>Ingridients:</h3>
+    </p>
+    <p>
         <ul>
             <li>1 cup cubed seeded watermelon</li>
             <li>1 ¼ cups water</li>
             <li>3 tablespoons sweetened strawberry lemonade drink mix</li>
         </ul>
     </p>
-    <p><strong>Directions:</strong>
+    <h3>Directions:</h3>
         <ol>
+            
             <li>Place the watermelon pieces onto a plastic-wrapped baking sheet, and freeze until solid, about 45 minutes.n</li>
         
             <li>Place the frozen watermelon, water, and strawberry lemonade drink mix in a blender; blend until slushy.n
