add cool dog jpg

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <h2> What cools your dog</h2>
+    <p>
+        <img src="./Images/dog.jpg" alt="A cool looking dog" width="300">
+    </p>
     <p>
         <a href=recipes/watermelon-lemonade-slush.html>Refreshing Watermelon 
         Lemonade Slush
