<ul> the recipes

--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <h2> What cools your dog</h2>
+    <h2> What cools your dog?</h2>
     <p>
         <img src="./Images/dog.jpg" alt="A cool looking dog" width="300">
     </p>
     <p>
-        <a href=recipes/watermelon-lemonade-slush.html>Refreshing Watermelon 
-        Lemonade Slush
-        </a>
-    </p>
-    <p>
-        <a href="recipes/Agua-de-Fresa.html">Agua de Fresa
-        </a>
+        <ul>
+            <li>
+                <a href=recipes/watermelon-lemonade-slush.html>Refreshing Watermelon 
+                    Lemonade Slush</a>
+            </li>
+            <li>
+                <a href="recipes/Agua-de-Fresa.html">Agua de Fresa</a>
+            </li>
+        </ul>
     </p>
 </body>
 </html>
